# $Id$

2008-08-21	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: prevent useless join for lazy
	properties too, spotted by Denis Shumeev <denis-shumeev@yandex.ru>.

	* main/Base/AbstractProtoClass.class.php,
	main/Base/LightMetaProperty.class.php: unneeded encapsulant's
	prefetching eliminated, problem was spatted by Denis Shumeev
	<denis-shumeev@yandex.ru>.

2008-08-19	Evgeny V. Kokovikhin

	* main/Net/Http/Cookie.class.php, CookieCollection.class.php: new
	javaisms introduced.

2008-08-17	Garmonbozia Research Group

	* main/Base/CallChain.class.php: helper introduced.

2008-08-14	Konstantin V. Arkhipov

	* core/Types/Time.class.php: toFullString() replaced by toString(),
	toTimeString() introduced.

2008-08-12	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: standalone tag content
	mistakenly typographized; spotted by Sergey M. Skachkov.

	* test/core/FiltersTest.class.php: corresponding test. 

2008-08-12	Denis M. Gabaidulin

	* main/DAOs/Workers/DalayedDropDaoWorker.class.php: new dao worker
	with delayed drop modified objects strategy.

2008-08-11	Vladlen Y. Koshelev

	* main/OQL/: OQL select query parser.
	
	* test/core/OqlTokenizerTest.class.php, OqlSelectTest.class.php:
	corresponding tests.
	
	* core/Exceptions/SyntaxErrorException.class.php: exception to be used
	in parsers and syntax analyzers.
	
2008-08-07	Ivan Y. Khvostishkov

	* meta/types/HttpUrlType.class.php: new internal type implemented.

2008-08-05	Ivan Y. Khvostishkov

	* core/OSQL/OrderBy.class.php: nullsFirst(), nullsLast(),
	isNullsFirst(), setNullsFirst() - PosgreSQL 8.3-specific ordering
	feature support.

2008-08-04	Ivan Y. Khvostishkov

	* main/Criteria/Projections/ClassProjection.class.php: proper table
	attached.

	* core/OSQL/SQLRightJoin.class.php: added.

	* core/OSQL/Joiner.class.php: getFirstTable() helper.

	* core/OSQL/TimeIntervalsGenerator.class.php: rewritten in OSQL, but
	still works in PostgreSQL only.
